# AmazonFreertosTest

./: CMakeLists.txt  main.c  partition-table.csv  sdkconfig  sdkconfig.old
tools/nvs_partition_generator/: nvs.csv  nvs_partition_gen.py
tools/nvs_partition_generator/files/: test.txt
